# stretchly

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: main.htm
app/assets/css/: main.css  menu.css
app/assets/css/android-material/: theme.css
app/assets/css/preferences/: about.css  love.css  preferences.css  schedule.css
app/assets/html/: locale.html  tray-menu.html
app/assets/html/preferences/: about.html  love.html  preferences.html  schedule.html  settings.html
app/assets/js/: locale.js  main.js  tray-icon.js
app/assets/js/android-material/: theme.js
app/assets/js/preferences/: love.js  preferences.js  settings.js
app/assets/json/: locales.json
src/: main.rs
